--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+  z-index: auto;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -25,7 +26,7 @@ a {
   background-position: right;
 }
 
-.fix-borders:not(:last-child) {
+.fix-borders:not(:last-of-type) {
   border-bottom: 0;
 }
 
