--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,34 @@ a {
   color: rgba(167, 12, 198, 0.983)
 }
 
+/* .no-scroll {
+  overflow: hidden;
+} */
+
+.load-spinner {
+  animation: spin 1.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite;
+  /* animation: bounce2 2s linear infinite; */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.height-minus-header {
+  height: calc(100vh - 56px);
+  top: 56px;
+}
+
+.mm-bg {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.78)),linear-gradient(to bottom, #3498db, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+
 /* .dropdown {
   overflow: hidden;
 }
