--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,10 @@ a {
   background: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.78)),linear-gradient(to bottom, #3498db, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.bg-paper {
+  background: linear-gradient(#c9b887 0 , hsl(49, 30%, 75%) 3% 95%, #c9b887 100%);
+}
+
 
 /* .dropdown {
   overflow: hidden;
